<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="makemyhall.app.dcmindia.com.makemyhalln3.PayOfflineDetails">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/BankDeposit"/>


    </LinearLayout>
    </android.support.v7.widget.CardView>

   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="30dp"
       app:cardElevation="3dp"
       android:elevation="10dp"
       app:cardCornerRadius="3dp"
       android:layout_margin="3dp">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#000"
                   android:text="@string/AccountName"

                   />

               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#FF00"
                   android:text="@string/AccountName1"

                   />

           </LinearLayout>


           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@android:color/darker_gray" />


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">


               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#000"
                   android:text="@string/BankName"

                   />

               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#FF00"
                   android:text="@string/BankName1"

                   />

           </LinearLayout>


           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@android:color/darker_gray" />


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">


               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="17sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#000"
                   android:text="@string/AccountNumber"

                   />

               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#FF00"
                   android:text="@string/AccountNumber1"

                   />

           </LinearLayout>


           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@android:color/darker_gray" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">


               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#000"
                   android:text="@string/BranchName"

                   />

               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#FF00"
                   android:text="@string/BranchName1"

                   />

           </LinearLayout>


           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@android:color/darker_gray" />



           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">


               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:textSize="18sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#000"
                   android:text="@string/IFSCCode"

                   />

               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   android:backgroundTint="#FF00"
                   android:text="@string/IFSCCode1"

                   />

           </LinearLayout>





       </LinearLayout>



   </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="12dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/bookappointment"
            android:padding="10dp"
            android:textColor="#FFF"
            android:background="#E91E63"
            android:text="@string/bookappointment"/>



    </android.support.v7.widget.CardView>




</LinearLayout>
