<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="makemyhall.app.dcmindia.com.makemyhalln3.ActivityForLocation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
         >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:text="@string/DESTINATION"/>

        <TextView
            android:id="@+id/open_button"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:gravity="center"
            android:hint="@string/searchLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:layout_gravity="top" />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/open_button"
            android:background="@drawable/locationshapenew"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="17dp"
            android:textColor="#FFF"
            android:hint="@string/selectcategory"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/category"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/category"
            android:background="@drawable/locationshapenew">

        </View>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/CHECKIN"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



        <EditText
            android:id="@+id/etxt_fromdate"
            android:layout_width="0dp"
            android:textColor="#FFF"
            android:layout_height="wrap_content"
            android:backgroundTint="#b9b9b9"
            android:layout_weight=".5"
            android:hint="@string/Fromdate" />

        <EditText
            android:id="@+id/etxt_todate"
            android:layout_width="0dp"
            android:backgroundTint="#b9b9b9"
            android:textColor="#FFF"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/Todate" />
        </LinearLayout>






        <TextView

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/place_details"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/place_attribution"
            android:autoLink="all"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/myshapesearchbtn"
            android:id="@+id/searchhall"
            android:text="@string/search1"/>


    </LinearLayout>
</LinearLayout>
