<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="makemyhall.app.dcmindia.com.makemyhalln3.BookingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


      <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="8dp"
       android:layout_margin="1dp"
       android:orientation="vertical"
       app:cardElevation="3dp"
       android:elevation="10dp"
       app:cardBackgroundColor="@color/white"
       app:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
   <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="#FF00"
          android:text="@string/CustomerName"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#000"
            android:inputType="textEmailAddress"
            android:background="@drawable/myshapeforbooking"
            android:hint="@string/entername" />
    </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF00"
            android:text="@string/customermobile"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/contactnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#000"
                android:maxLength="10"
                android:inputType="phone"
                android:background="@drawable/myshapeforbooking"
                android:hint="@string/customermobile" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF00"
            android:text="@string/customeremailId"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#000"
                android:inputType="textEmailAddress"
                android:background="@drawable/myshapeforbooking"
                android:hint="@string/enteremaildid" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/payoffline"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/payoffline"
                />


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginLeft="5dp"
                android:id="@+id/procedbook"
                android:background="@color/colorAccent"
                android:text="@string/payonline"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
